; ModuleID = '/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lptree.c_buildgrammar.c'
source_filename = "/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lptree.c_buildgrammar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32, i32, %struct.TYPE_12__, i64 }
%struct.TYPE_12__ = type { i32 }

@TRule = common dso_local global i32 0, align 4
@TTrue = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_13__*, i32, i32)* @buildgrammar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @buildgrammar(i32* %0, %struct.TYPE_13__* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_13__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_13__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_13__*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_13__* %1, %struct.TYPE_13__** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %14 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %15 = call %struct.TYPE_13__* @sib1(%struct.TYPE_13__* %14)
  store %struct.TYPE_13__* %15, %struct.TYPE_13__** %10, align 8
  store i32 0, i32* %9, align 4
  br label %16

16:                                               ; preds = %57, %4
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %8, align 4
  %19 = icmp slt i32 %17, %18
  br i1 %19, label %20, label %60

20:                                               ; preds = %16
  %21 = load i32, i32* %7, align 4
  %22 = load i32, i32* %9, align 4
  %23 = mul nsw i32 2, %22
  %24 = add nsw i32 %21, %23
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %11, align 4
  %26 = load i32*, i32** %5, align 8
  %27 = load i32, i32* %11, align 4
  %28 = call %struct.TYPE_13__* @gettree(i32* %26, i32 %27, i32* %12)
  store %struct.TYPE_13__* %28, %struct.TYPE_13__** %13, align 8
  %29 = load i32, i32* @TRule, align 4
  %30 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %31 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %30, i32 0, i32 1
  store i32 %29, i32* %31, align 4
  %32 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %33 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %32, i32 0, i32 3
  store i64 0, i64* %33, align 8
  %34 = load i32, i32* %9, align 4
  %35 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %36 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %35, i32 0, i32 0
  store i32 %34, i32* %36, align 8
  %37 = load i32, i32* %12, align 4
  %38 = add nsw i32 %37, 1
  %39 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %40 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %39, i32 0, i32 2
  %41 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %40, i32 0, i32 0
  store i32 %38, i32* %41, align 8
  %42 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %43 = call %struct.TYPE_13__* @sib1(%struct.TYPE_13__* %42)
  %44 = load %struct.TYPE_13__*, %struct.TYPE_13__** %13, align 8
  %45 = load i32, i32* %12, align 4
  %46 = sext i32 %45 to i64
  %47 = mul i64 %46, 24
  %48 = trunc i64 %47 to i32
  %49 = call i32 @memcpy(%struct.TYPE_13__* %43, %struct.TYPE_13__* %44, i32 %48)
  %50 = load i32*, i32** %5, align 8
  %51 = load i32, i32* %11, align 4
  %52 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %53 = call %struct.TYPE_13__* @sib1(%struct.TYPE_13__* %52)
  %54 = call i32 @mergektable(i32* %50, i32 %51, %struct.TYPE_13__* %53)
  %55 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %56 = call %struct.TYPE_13__* @sib2(%struct.TYPE_13__* %55)
  store %struct.TYPE_13__* %56, %struct.TYPE_13__** %10, align 8
  br label %57

57:                                               ; preds = %20
  %58 = load i32, i32* %9, align 4
  %59 = add nsw i32 %58, 1
  store i32 %59, i32* %9, align 4
  br label %16

60:                                               ; preds = %16
  %61 = load i32, i32* @TTrue, align 4
  %62 = load %struct.TYPE_13__*, %struct.TYPE_13__** %10, align 8
  %63 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %62, i32 0, i32 1
  store i32 %61, i32* %63, align 4
  ret void
}

declare dso_local %struct.TYPE_13__* @sib1(%struct.TYPE_13__*) #1

declare dso_local %struct.TYPE_13__* @gettree(i32*, i32, i32*) #1

declare dso_local i32 @memcpy(%struct.TYPE_13__*, %struct.TYPE_13__*, i32) #1

declare dso_local i32 @mergektable(i32*, i32, %struct.TYPE_13__*) #1

declare dso_local %struct.TYPE_13__* @sib2(%struct.TYPE_13__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
